# UltraRust

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md
src/: config.rs  driver.rs  json_output.rs  lib.rs  main.rs  pipeline.rs  stage_compile.rs  stage_security.rs  stage_supply_chain.rs  types.rs
src/config/: clippy_config.toml  deny_config.toml
src/lints/: bounded_generics.rs  mod.rs  no_infinite_loops.rs  no_interior_mut.rs  no_string_errors.rs  public_api_lifetimes.rs
src/security/: command_injection.rs  hardcoded_secrets.rs  insecure_deser.rs  insecure_random.rs  insecure_tls.rs  mod.rs  path_traversal.rs  sql_injection.rs  timing_attack.rs  unbounded_reads.rs  weak_crypto.rs
tests/: integration_checks.rs
tests/fixtures/: clean_code.rs  lint_violations.rs  security_violations.rs
