[package]
name = "ultrarust"
version = "1.0.0"
edition = "2021"
description = "A hardened Rust pipeline for AI-generated code"
license = "MIT"
readme = "README.md"
keywords = ["lint", "security", "clippy", "audit", "pipeline"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "ultrarust"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Source analysis (syn-based, works on stable Rust)
syn = { version = "2", features = ["full", "parsing", "visit"] }
quote = "1"
proc-macro2 = { version = "1", features = ["span-locations"] }

# File walking
walkdir = "2"
glob = "0.3"

# Regex for security pattern matching
regex = "1"

# Process execution
which = "7"

# Error handling
anyhow = "1"
thiserror = "2"

# Colored terminal output
colored = "3"

# Entropy calculation for secret detection
shannon-entropy = "0.2"

# TOML parsing for Cargo.toml config
toml = "0.8"

# Embedded config files
include_dir = "0.7"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
